Fix timetable head text overflow

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -764,6 +764,8 @@ a {
                         line-height: $line-height-smallest;
                         color: $color-text-light;
                         position: relative;
+                        white-space: nowrap;
+                        margin: 0 -100px;
                     }
 
                     &:not(.table-head) {
